# mancala-parallel-kubernetes

./: .gitignore  README.md
.github/workflows/: ci.yml  classroom.yml
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: main.py
backend/tests/: test_health.py
deploy/cloud/: 10-configmap.yaml  20-motor.yaml  30-backend.yaml  40-frontend.yaml  50-ingress.yaml  60-hpa.yaml  70-loadbalancers.yaml  README.md
deploy/local/: docker-compose.yml
deploy/local/k8s/: 00-namespace.yaml  10-configmap.yaml  20-motor.yaml  30-backend.yaml  40-frontend.yaml  README.md
deploy/local/loadtest/: README.md  move.js  post_move.lua
docs/: 01-arquitectura.md  02-motor.md  03-paralelizacion.md  04-despliegue-local.md  05-despliegue-nube.md  06-cicd.md  07-analisis-comparativo.md  08-conclusiones.md  README.md
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf
frontend/public/: app.js  config.js  index.html  style.css
motor/: .dockerignore  Dockerfile
motor/bench/: run_benchmarks.sh
motor/src/: CMakeLists.txt  alphabeta.cpp  alphabeta.hpp  api.cpp  api.hpp  bench_main.cpp  board.cpp  board.hpp  http_server.cpp  http_server.hpp  json_min.hpp  main.cpp
motor/tests/: suite.txt  test_runner.cpp
